--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
     <header>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index.css">
         <title></title>
         <head>
         <h1><img src=""> </h1>
