--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3CrcRJcgHyjlsJFmJKqYBWDlzC6Eqga5wUw&usqp=CAU">
      </main>
      <footer>
-         
+          <a href="https://tapok122.github.io/hotwheels/"> 1 сторінка</a>
      </footer>
     </body>
 </html>
